--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,20 @@
   --size-10xl: 10rem;
 }
 
+/* scroll bar */
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--clr-rose);
+  outline: 1px solid var(--clr-rose);
+}
+
 * {
   margin: 0;
   line-height: calc(1em + 0.5rem);
