fix: finish update work section collaborate assets folder

--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -68,6 +68,10 @@
   font-size: var(--size-sm);
 }
 
+.work__project-btn.ieee-btn {
+  margin-left: 1rem;
+}
+
 .work__project-subtitle {
   display: none;
 }
