--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -7,8 +7,8 @@
   color: #f1f5f9;
   padding: 0.5em 1em;
   border-radius: 6px;
-  box-shadow: 0 10px 20px rgba(255, 29, 72, 0.5),
-    0 6px 6px rgba(255, 29, 72, 0.5), 0 0 100px -10px var(--clr-rose);
+  box-shadow: 0 10px 20px rgba(39, 71, 66, 0.5), 0 6px 6px rgba(39, 71, 66, 0.5),
+    0 0 100px -10px var(--clr-rose);
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
