--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   --clr-slate800: #1e293b;
   --clr-rose: #e11d48;
   --clr-indigo: #4f46e5;
+  --clr-featTechText: black;
+  --clr-workTechText: #94a3b8;
+  --clr-featBg: #475569;
 
   /* rose 255, 29, 72 */
   /* indigo 79, 70, 229 */
@@ -57,6 +60,8 @@ html {
   --clr-slate400: #1e293b;
   --clr-slate600: #1e293b;
   --clr-slate800: #1e293b;
+  --clr-featBg: #94a3b8;
+  --clr-workTechText: #000;
 }
 
 body {
